Fix article alignment at first breakpoint

--- a/projects/super-responsive/css/style.css
+++ b/projects/super-responsive/css/style.css
@@ -109,6 +109,7 @@ header nav {
 	article {
 		display: flex;
 		flex-direction: row;
+		align-items: center;
 		gap: 1rem;
 	}
 
@@ -159,6 +160,7 @@ header nav {
 	.article-content {
 		display: flex;
 		flex-direction: column;
+		justify-content: flex-end;
 		align-items: center;
 	}
 
